2010-05-24  Andreia Gaita  <avidigal@novell.com>

	* curl.m4: tweak curl configure options to not build unnecessary
	things that can potentially break the build on dev systems

2010-05-12  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* curl.m4: Show configure failure reason for embedded curl.

2010-04-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: remove ff36 bridge.
	using --define-variable=includetype=unstable on pkg-config for
	the ff3 bridge, we can get cflags that work for both libxul 1.9.1
	and 1.9.2, so ff3 now supports both.

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* m4/curl.m4: move CUSTOM_SUBDIR_OPTION to utilities.m4
	* m4/utilities.m4: define m4_ifblank/m4_ifnblank helpers

2010-03-30  Andreia Gaita  <avidigal@novell.com>

	* various.m4: move curl checks to curl.m4
	* curl.m4: add support for --with-curl=no|embedded|system options
	* ax_file_escapes.m4, m4/ax_print_to_file.m4: helper files for
	CUSTOM_SUBDIR_OPTION

2010-02-26  Andreia Gaita  <avidigal@novell.com>

	* various.m4: Add curl checks and --with-curl flag to
	activate building the curl bridge

2010-02-17  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Fix firefox flags, for they are borked

2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* mozilla.m4: Add Firefox 3.6 support

2009-12-08  Chris Toshok  <toshok@ximian.com>

	* build-configuration.m4: add --enable-sdk (defaults to yes) so
	people can disable the monodevelop sdk installation.

2009-10-07  Rusty Howell  <rhowell@novell.com>

	 * mozilla.m4: Reverting MAX_FIREFOX_VERSION back to 3.5.* due to FF 3.6
	deprecating XPCOM and migrating to npruntime
	See: http://lists.ximian.com/pipermail/moonlight-list/2009-October/000627.html

2009-07-30  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* mozilla.m4: Bump MAX_FIREFOX_VERSION to make it work with
	Firefox trunk. See 
	http://lists.ximian.com/pipermail/moonlight-list/2009-June/000504.html

2009-06-02  Rusty Howell  <rhowell@novell.com>
