@@ -7,12 +7,21 @@
 
 	* curl.m4: Show configure failure reason for embedded curl.
 
+	* chrome.m4: Add parenthesis around failure reasons to make configure output
+	more readable.
+
 2010-04-28  Andreia Gaita  <avidigal@novell.com>
 
 	* mozilla.m4: remove ff36 bridge.
 	using --define-variable=includetype=unstable on pkg-config for
 	the ff3 bridge, we can get cflags that work for both libxul 1.9.1
 	and 1.9.2, so ff3 now supports both.
+
+2010-04-08  Chris Toshok  <toshok@ximian.com>
+
+	* chrome.m4: check for more chrome executables, and remove the
+	python check since we aren't using python to sign crx files
+	anymore.
 
 2010-03-30  Andreia Gaita  <avidigal@novell.com>
 
